Add requirements for docs in separate file

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -31,6 +31,5 @@ python:
    install:
    - method: pip
      path: .
-    #  extra_requirements:
-    #    - doodle/docs/requirements.txt
-  #  - requirements: doodle/docs/requirements.txt
+     extra_requirements:
+        - doodle/docs/requirements.txt
