--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -31,5 +31,7 @@ python:
    install:
    - method: pip
      path: .
-     extra_requirements:
-        - doodle/docs/requirements.txt
+     requirements:
+        - .
+        - -r doodle/docs/requirements.txt
+
