--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -31,5 +31,6 @@ python:
    install:
    - method: pip
      path: .
-     requirements: doodle/docs/requirements.txt
+     extra_requirements:
+        - docs: -r doodle/docs/requirements.txt
 
