--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -31,6 +31,6 @@ python:
    install:
    - method: pip
      path: .
-     extra_requirements:
-        - docs: -r doodle/docs/requirements.txt
+    #  extra_requirements:
+    #     - docs: -r doodle/docs/requirements.txt
 
