--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -31,6 +31,6 @@ python:
    install:
    - method: pip
      path: .
-    #  extra_requirements:
+     requirements: requirements.txt
     #     - docs: -r doodle/docs/requirements.txt
 
