--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -32,5 +32,5 @@ python:
    - method: pip
      path: .
      requirements: requirements.txt
-    #     - docs: -r doodle/docs/requirements.txt
+     requirements: -r doodle/docs/requirements.txt
 
