--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -29,8 +29,9 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - method: pip
-     path: .
-     requirements: requirements.txt
-     requirements: -r doodle/docs/requirements.txt
+    - requirements: requirements.txt
+    - method: pip
+      path: . 
+    # - method: pip 
+    #  requirements: -r doodle/docs/requirements.txt
 
