--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -30,6 +30,7 @@ sphinx:
 python:
    install:
     - requirements: requirements.txt
+    - requirements: doodle/docs/requirements.txt
     - method: pip
       path: . 
     # - method: pip 
